# xlimage

./: .gitignore  README.md  image_loader.py  pyproject.toml  workbook_parser.py
.github/workflows/: ci.yml  publish.yml
src/xlcellimage/: __init__.py  image_loader.py  workbook_parser.py
src/xlimage/: __init__.py  image_loader.py  workbook_parser.py
testing/: test.py
tests/: conftest.py
tests/data/: test_workbook.xlsx  test_workbook_parser.py
