[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="xlimage"
version="0.1.0"
description="Efficiently read images stored in Excel with Python."
readme="README.md"
requires-python = ">=3.10"
authors=[{ name="Daniel Martin", email ="danielamartin314@gmail.com" }]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]

[tool.pytest.ini_options]
testpaths=["tests"]
